--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,19 @@
 [info]
+url = "https://example.com/"
+listen_host = "127.0.0.1"
+listen_port = 8085
+private_key = "supersecretprivatekey"
+
+[mint_info]
+name = "test mint"
+description = "A mint for testing"
+motd = "Hello world"
+
+[contact]
+email = "me@example.com"
+
 [ln]
-path=/home/root/.lightning/signet/lightning-rpc
+path = "/home/thesimplekid/.lightning/signet/lightning-rpc"
+ln_backend = "Cln"
+fee_percent = 1.0
+reserve_fee_min = 1000
