--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@
 url = "https://example.com/"
 listen_host = "127.0.0.1"
 listen_port = 8085
-private_key = "supersecretprivatekey"
+secret_key = "supersecretprivatekey"
 
 [mint_info]
 name = "test mint"
@@ -13,7 +13,7 @@ motd = "Hello world"
 email = "me@example.com"
 
 [ln]
-path = "/home/thesimplekid/.lightning/signet/lightning-rpc"
+path = "~/.lightning/signet/lightning-rpc"
 ln_backend = "Cln"
 fee_percent = 1.0
 reserve_fee_min = 1000
