--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ config = { version = "0.13.3", features = ["toml"] }
 dirs = "5.0.1"
 futures = "0.3.28"
 log = "0.4.19"
+gl-client = { git = "ssh://git@github.com/Blockstream/greenlight" }
 redb = "0.22.0"
 serde = "1.0.164"
 serde_json = "1.0.96"
@@ -23,3 +24,5 @@ tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread", "sync"] }
 tracing = "0.1.37"
 tracing-subscriber = "0.3.17"
 uuid = { version = "1.3.4", features= ["v4","fast-rng"] }
+rand = "0.8.5"
+bip39 = { version = "2.0.0", features = ["rand_core"] }
