--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,14 +3,12 @@ name = "cashu-rs-mint"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 anyhow = "1.0.71"
 async-trait = "0.1.68"
 axum = "0.6.18"
 axum-macros = "0.3.7"
-# cashu = { path = "../cashu-rs" }
 cashu-crab = { path = "../cashu-crab" }
 cln-rpc = "0.1.3"
 config = { version = "0.13.3", features = ["toml"] }
@@ -28,3 +26,4 @@ uuid = { version = "1.3.4", features= ["v4","fast-rng"] }
 rand = "0.8.5"
 bip39 = { version = "2.0.0", features = ["rand_core"] }
 bitcoin_hashes = "0.12.0"
+ldk-node = "0.1.0"
