fix: `split` ordering

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,8 @@ anyhow = "1.0.71"
 async-trait = "0.1.68"
 axum = "0.6.18"
 axum-macros = "0.3.7"
-cashu-crab = { path = "../cashu-crab" }
+# cashu-crab = { path = "../cashu-crab" }
+cashu-crab = { git = "https://github.com/thesimplekid/cashu-crab", rev = "471a4d5" }
 cln-rpc = "0.1.3"
 config = { version = "0.13.3", features = ["toml"] }
 dirs = "5.0.1"
