--- a/mint/Cargo.toml
+++ b/mint/Cargo.toml
@@ -5,12 +5,13 @@ edition = "2021"
 
 
 [dependencies]
+node-manager-types = {path="../types"}
 anyhow = "1.0.71"
 async-trait = "0.1.68"
 axum = "0.6.18"
 axum-macros = "0.3.7"
-# cashu-crab = { path = "../cashu-crab" }
-cashu-crab = { git = "https://github.com/thesimplekid/cashu-crab"}
+cashu-crab = { path = "../../cashu-crab" }
+# cashu-crab = { git = "https://github.com/thesimplekid/cashu-crab"}
 cln-rpc = "0.1.3"
 config = { version = "0.13.3", features = ["toml"] }
 dirs = "5.0.1"
@@ -28,3 +29,5 @@ rand = "0.8.5"
 bip39 = { version = "2.0.0", features = ["rand_core"] }
 bitcoin_hashes = "0.12.0"
 ldk-node = "0.1.0"
+bitcoin = { version = "0.30.0", features = ["no-std"] }
+tower-http = { version = "0.4.1", features = ["cors"] }
