--- a/config.toml
+++ b/config.toml
@@ -14,7 +14,7 @@ motd = "Hello world"
 email = "me@example.com"
 
 [ln]
-path = "~/.lightning/signet/lightning-rpc"
-ln_backend = "Ldk"
+cln_path = "~/.lightning/signet/lightning-rpc"
+ln_backend = "Cln"
 fee_percent = 1.0
 reserve_fee_min = 1000
