--- a/mint/Cargo.toml
+++ b/mint/Cargo.toml
@@ -31,3 +31,6 @@ bitcoin_hashes = "0.12.0"
 ldk-node = "0.1.0"
 bitcoin = { version = "0.30.0", features = ["no-std"] }
 tower-http = { version = "0.4.1", features = ["cors"] }
+bech32 = "0.9.1"
+hex = "0.4.3"
+url = "2.4.0"
