--- a/mint-manager/Cargo.toml
+++ b/mint-manager/Cargo.toml
@@ -22,3 +22,8 @@ cashu-crab = {path ="../../cashu-crab"}
 log = "0.4.19"
 wasm-logger = "0.2.0"
 web-sys = "0.3.64"
+gloo = "0.8.1"
+wasm-bindgen = "0.2.87"
+js-sys = "0.3.64"
+nostr = { version = "0.22.0", default-features = false}
+gloo-storage = "0.2.2"
