--- a/mint-manager/Cargo.toml
+++ b/mint-manager/Cargo.toml
@@ -13,17 +13,17 @@ categories = ["gui", "wasm", "web-programming"]
 [dependencies]
 node-manager-types = { path = "../types" }
 gloo-net = "0.3.0"
-serde = { version = "1.0.164", features = ["derive"] }
-serde_json = "1.0.99"
+serde = { workspace = true }
+serde_json = { workspace = true }
 wasm-bindgen-futures = "0.4.37"
 yew = { version="0.20", features=["csr"] }
-bitcoin = { version = "0.30.0", features = ["no-std"] }
-cashu-crab = {path ="../../cashu-crab"}
+cashu-crab = { workspace = true }
+bitcoin = { workspace = true }
 log = "0.4.19"
 wasm-logger = "0.2.0"
 web-sys = "0.3.64"
 gloo = "0.8.1"
 wasm-bindgen = "0.2.87"
 js-sys = "0.3.64"
-nostr = { version = "0.22.0", default-features = false}
+nostr = { workspace = true }
 gloo-storage = "0.2.2"
