--- a/types/Cargo.toml
+++ b/types/Cargo.toml
@@ -6,8 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serde = { version = "1.0.164", features = ["derive"] }
-cashu-crab = {path = "../../cashu-crab"}
-bitcoin = { version = "0.30.0", features = ["no-std"] }
-serde_json = "1.0.100"
+cashu-crab = { workspace = true }
+bitcoin = { workspace = true }
 anyhow = "1.0.71"
+serde = { workspace = true }
+serde_json = { workspace = true }
