--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,4 @@ bitcoin = { version = "0.30.0", features = ["no-std"] }
 serde = "1.0.164"
 serde_json = "1.0.96"
 nostr = { version = "0.22.0", default-features = false }
+jwt-compact = "0.8.0-beta.1"
