--- a/mint/Cargo.toml
+++ b/mint/Cargo.toml
@@ -33,6 +33,7 @@ bech32 = "0.9.1"
 hex = "0.4.3"
 url = "2.4.0"
 nostr = { workspace = true }
-jsonwebtoken = "8.3.0"
+jwt-compact = { workspace = true } 
 axum-extra = { version = "0.7.4", features = ["cookie"] }
 time = "0.3.22"
+chrono = "0.4.26"
