--- a/mint-manager/Cargo.toml
+++ b/mint-manager/Cargo.toml
@@ -1,13 +1,8 @@
 [package]
-name = "trunk-template"
+name = "mint-manager"
 version = "0.1.0"
 edition = "2021"
-description = "Template for starting a Yew project using Trunk"
 readme = "README.md"
-repository = "https://github.com/yewstack/yew-trunk-minimal-template"
-license = "MIT OR Apache-2.0"
-keywords = ["yew", "trunk"]
-categories = ["gui", "wasm", "web-programming"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
