--- a/mint-manager/Cargo.toml
+++ b/mint-manager/Cargo.toml
@@ -16,7 +16,7 @@ cashu-crab = { workspace = true }
 bitcoin = { workspace = true }
 log = "0.4.19"
 wasm-logger = "0.2.0"
-web-sys = "0.3.64"
+web-sys = { version = "0.3.64", features = ["HtmlSelectElement"] }
 gloo = "0.8.1"
 wasm-bindgen = "0.2.87"
 js-sys = "0.3.64"
