db and config cli args

--- a/mint/Cargo.toml
+++ b/mint/Cargo.toml
@@ -37,3 +37,4 @@ jwt-compact = { workspace = true }
 axum-extra = { version = "0.7.4", features = ["cookie"] }
 time = "0.3.22"
 chrono = "0.4.26"
+clap = { version = "4.3.14", features = ["env", "default", "derive"]}
