--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ license-file = "LICENSE"
 keywords = ["bitcoin", "e-cash", "cashu"]
 
 [workspace.dependencies]
-# cashu-crab = { path = "../../cashu-crab" }
+# cashu-crab = { path = "../cashu-crab" }
 cashu-crab = { git = "https://github.com/thesimplekid/cashu-crab"}
 bitcoin = { version = "0.30.0", features = ["no-std"] }
 serde = "1.0.164"
