--- a/mint/Cargo.toml
+++ b/mint/Cargo.toml
@@ -15,7 +15,7 @@ cln-rpc = "0.1.3"
 config = { version = "0.13.3", features = ["toml"] }
 dirs = "5.0.1"
 futures = "0.3.28"
-gl-client = { git = "ssh://git@github.com/Blockstream/greenlight" }
+gl-client = { git = "https://github.com/Blockstream/greenlight" }
 redb = "1.0.4"
 serde = { workspace = true }
 serde_json = { workspace = true }
