--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -24,5 +24,6 @@ jobs:
       run: cargo fmt --all --check 
     - name: Run clippy
       run: |
+        sudo apt-get install -y protobuf-compiler
         rustup component add clippy
         cargo clippy --all
