--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,6 @@
 
 members = [
     "mint",
-    "types",
     "mint-manager"
 ]
 
@@ -23,3 +22,5 @@ serde = "1.0.164"
 serde_json = "1.0.96"
 nostr = { version = "0.22.0", default-features = false }
 jwt-compact = "0.8.0-beta.1"
+# ln-rs = { path = "../ln-rs" }
+ln-rs = { git = "https://github.com/thesimplekid/ln-rs"}
