--- a/mint-manager/Cargo.toml
+++ b/mint-manager/Cargo.toml
@@ -23,4 +23,4 @@ anyhow = "1.0.71"
 jwt-compact = { workspace = true }
 url = "2.4.0"
 gloo-net = "0.4.0"
-ln-rs = { workspace = true }
+ln-rs-models = { path = "../../ln-rs/crates/ln-rs-models"}
