--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [workspace]
 
 members = [
-    "mint",
-    "mint-manager"
+    "crates/mint",
+    "crates/mint-manager"
 ]
 
 [workspace.metadata]
@@ -15,6 +15,7 @@ license-file = "LICENSE"
 keywords = ["bitcoin", "e-cash", "cashu"]
 
 [workspace.dependencies]
+anyhow = "1.0.71"
 # cashu-crab = { path = "../cashu-crab" }
 cashu-crab = { git = "https://github.com/thesimplekid/cashu-crab"}
 bitcoin = { version = "0.30.0", features = ["no-std"] }
@@ -24,3 +25,4 @@ nostr = { version = "0.22.0", default-features = false }
 jwt-compact = "0.8.0-beta.1"
 # ln-rs = { path = "../ln-rs/crates/ln-rs" }
 ln-rs = { git = "https://github.com/thesimplekid/ln-rs"}
+url = "2.4.0"
