--- a/crates/mint-manager/Cargo.toml
+++ b/crates/mint-manager/Cargo.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
+anyhow = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 wasm-bindgen-futures = "0.4.37"
@@ -19,8 +20,8 @@ gloo = "0.10.0"
 wasm-bindgen = "0.2.87"
 js-sys = "0.3.64"
 nostr = { workspace = true }
-anyhow = "1.0.71"
 jwt-compact = { workspace = true }
-url = "2.4.0"
+url = { workspace = true }
 gloo-net = "0.4.0"
-ln-rs-models = { path = "../../ln-rs/crates/ln-rs-models"}
+ln-rs-models = { git = "https://github.com/thesimplekid/ln-rs" }
+# ln-rs-models = { path = "../../ln-rs/crates/ln-rs-models"}
