--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ keywords = ["bitcoin", "e-cash", "cashu"]
 [workspace.dependencies]
 anyhow = "1.0.71"
 # cashu-crab = { path = "../cashu-crab" }
-cashu-crab = { git = "https://github.com/thesimplekid/cashu-crab"}
+cashu-sdk = { git = "https://github.com/thesimplekid/cashu-crab", rev = "b1a12525d27c2ce35a06b05a1def23825ead2644", default-features = false, features = ["mint"] }
 bitcoin = { version = "0.30.0", features = ["no-std"] }
 serde = "1.0.164"
 serde_json = "1.0.96"
