--- a/crates/mint/Cargo.toml
+++ b/crates/mint/Cargo.toml
@@ -9,7 +9,7 @@ anyhow = { workspace = true }
 async-trait = "0.1.68"
 axum = "0.6.18"
 axum-macros = "0.3.7"
-cashu-crab = { workspace = true }
+cashu-sdk = { workspace = true }
 cln-rpc = "0.1.3"
 config = { version = "0.13.3", features = ["toml"] }
 dirs = "5.0.1"
