--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,5 +24,5 @@ serde_json = "1.0.96"
 nostr = { version = "0.22.0", default-features = false }
 jwt-compact = "0.8.0-beta.1"
 # ln-rs = { path = "../ln-rs/crates/ln-rs" }
-ln-rs = { git = "https://github.com/thesimplekid/ln-rs"}
+ln-rs = { git = "https://github.com/thesimplekid/ln-rs", rev = "782e7ffd86ec1bb2fad264b7a17d4f30e8fb3453", default-features = false, features = ["cln"] }
 url = "2.4.0"
