--- a/config.toml
+++ b/config.toml
@@ -2,12 +2,13 @@
 url = "https://example.com/"
 listen_host = "127.0.0.1"
 listen_port = 8085
-secret_key = "supersecretprivatekey"
+mnemonic = "supersecretprivatekey"
 max_order = 32
 
 [mint_info]
 name = "test mint"
 description = "A mint for testing"
+description_long = "A longer mint for testing"
 motd = "Hello world"
 
 [contact]
