feat: regtest node in nix flake
This is not complete yet as there is some configuration required that
is note defined in the flake.

--- a/config.toml
+++ b/config.toml
@@ -2,14 +2,15 @@
 url = "https://example.com/"
 listen_host = "127.0.0.1"
 listen_port = 8085
-mnemonic = "supersecretprivatekey"
+mnemonic = "inner strategy nasty verify camp bind avoid cause glue holiday dress bounce exotic husband hungry winter diet town spray team number hen upper seek"
 max_order = 32
+db_path = "./mint.redb"
 
-[mint_info]
-name = "test mint"
-description = "A mint for testing"
-description_long = "A longer mint for testing"
-motd = "Hello world"
+#[mint_info]
+#name = "test mint"
+#description = "A mint for testing"
+#description_long = "A longer mint for testing"
+#motd = "Hello world"
 
 [contact]
 email = "me@example.com"
@@ -20,7 +21,7 @@ email = "me@example.com"
 ln_backend = "Cln"
 
 # CLN
-cln_path = "~/.lightning/signet/lightning-rpc"
+cln_path = "/home/thesimplekid/Documents/Development/cashu-rs-mint/tmp/ln_1/regtest/lightning-rpc"
 
 # Required to start greenlight for the first time
 # greenlight_invite_code = ""
