--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,12 +33,15 @@ time = "0.3.22"
 chrono = "0.4.26"
 clap = { version = "4.3.14", features = ["env", "default", "derive"]}
 anyhow = "1.0.71"
-cdk = { git = "https://github.com/cashubtc/cdk", rev = "e1506c4", default-features = false, features = ["mint"] }
-cdk-redb = { git = "https://github.com/cashubtc/cdk", rev = "e1506c4", default-features = false, features = ["mint"] }
-cdk-sqlite = { git = "https://github.com/cashubtc/cdk", rev = "e1506c4", default-features = false, features = ["mint"] }
-# cdk-sqlite = { path = "../../cdk/sql/crates/cdk-sqlite", default-features = false, features = ["mint"] }
-# cdk-redb = { path = "../../cdk/nut14/crates/cdk-redb", default-features = false, features = ["mint"]  }
-
+# cdk = { git = "https://github.com/cashubtc/cdk", rev = "1cc3fa7", default-features = false, features = ["mint"] }
+# cdk-redb = { git = "https://github.com/cashubtc/cdk", rev = "1cc3fa7", default-features = false, features = ["mint"] }
+# cdk-sqlite = { git = "https://github.com/cashubtc/cdk", rev = "1cc3fa7", default-features = false, features = ["mint"] }
+cdk = { git = "https://github.com/thesimplekid/cdk", branch = "mpp", default-features = false, features = ["mint"] }
+cdk-redb = { git = "https://github.com/thesimplekid/cdk", branch = "mpp", default-features = false, features = ["mint"] }
+cdk-sqlite = { git = "https://github.com/thesimplekid/cdk", branch = "mpp", default-features = false, features = ["mint"] }
+# cdk = { path = "../../cdk/mpp/crates/cdk", default-features = false, features = ["mint"] }
+# cdk-sqlite = { path = "../../cdk/mpp/crates/cdk-sqlite", default-features = false, features = ["mint"] }
+# cdk-redb = { path = "../../cdk/mpp/crates/cdk-redb", default-features = false, features = ["mint"]  }
 bitcoin = { version = "0.30.0", features = ["no-std"] }
 serde = "1.0.164"
 serde_json = "1.0.96"
